[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/freeze_ray.gd" type="Script" id=1]
[ext_resource path="res://textures/freeze_ray.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Beam:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="FreezeRay" type="RayCast2D"]
show_behind_parent = true
enabled = true
cast_to = Vector2( 0, -500 )
collision_mask = 2
script = ExtResource( 1 )

[node name="LeftRay" type="RayCast2D" parent="."]
position = Vector2( -2, 0 )
enabled = true
cast_to = Vector2( 0, -500 )
collision_mask = 2

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2( 2, 0 )
enabled = true
cast_to = Vector2( 0, -500 )
collision_mask = 2

[node name="Beam" type="TextureRect" parent="."]
margin_left = -8.0
margin_top = -512.0
margin_right = 8.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 1 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="on_fadeout_finished"]
